Bug #10142
smatch fix for who
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Description
Quieten smatch.
History
Updated by Joshua M. Clulow 10 months ago
Updated by Electric Monk 10 months ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 6062513a89a98a278aea621a2e591ba8df1a8b8e
commit 6062513a89a98a278aea621a2e591ba8df1a8b8e Author: John Levon <john.levon@joyent.com> Date: 2019-02-10T11:07:30.000Z 10142 smatch fix for who Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Joshua M. Clulow <josh@sysmgr.org>